@@ -107,20 +107,19 @@ b5e558f981326d9ca1bfdb841640721a  make-4.0.tar.gz
 0475638eb40a3920d0d3f14482c924a4  makedepend-1.0.5.tar.bz2
 015526f7328f746407f10a0a211f0c0a  nvc_get_devices.tgz
 9be6e048224797bf531f94b7a8aaa99d  osqp-0.6.0.tar.gz
-6d5836e5894ff7bddfdcfeadb71e9ca1  petsc/MUMPS_5.2.1-p2.tar.gz
+fe535e221293e72c7813e3bc2a60640a  petsc/MUMPS_5.3.3-p2.tar.gz
 0ddc62ed2636720be74be2e27e1fef6e  petsc/SuiteSparse-5.7.1.tar.gz
-c14af5cc0ee46e3f9e117d9dfb35b6af  petsc/cusplibrary-0.5.1.tar.gz
 5724bcffed4ebe39e9b55a9be80859ec  petsc/flex-2.6.0.tar.gz
-f4aafff3efaf14a211bc8fd558044782  petsc/hypre-2.18.2.tar.gz
-af0d057274faf5b11966f02a5d62a4d7  petsc/metis-5.1.0-p8.tar.gz
+6704f17e342976e076e84c367bc995f3  petsc/hypre-2.19.0.tar.gz
+82e3b09d577580747fbcada30d9b4228  petsc/metis-5.1.0-p10.tar.gz
 3ba025a94fa01594573ee0df4fca9bef  petsc/ml-6.2-p4.tar.gz
 4aefdc1b32412562260126698fcb8055  petsc/parmetis-4.0.3-p6.tar.gz
-5f8b02ff1034a8ff1f79c090d88a33dd  petsc/petsc-3.13.5.tar.gz
-42998e9de369916566e88a81eb243ca0  petsc/scalapack-2.1.0-p1.tgz
+15f64ce6933e78a17556a73bc3cc13ef  petsc/petsc-3.14.1.tar.gz
+921248775d6935e11ec1eec3efdafa9d  petsc/scalapack-2.1.0-p2.tgz
 2484682a84eddda48ddcbe725adea875  petsc/scotch-6.0.9.tar.gz
 b721c134f138620824347930f0333ceb  petsc/superlu-5.2.1.tar.gz
 cfa3a57cadd5b6df544bbb88942015b3  petsc/superlu_dist-6.3.0.tar.gz
-fa590049a51453d0df7f51b305e3db5e  petsc/viennacl-b09c65a.tar.gz
+5ddaf8169771ad50cd2f4a0b4ee8730d  petsc/viennacl-dc552a8.tar.gz
 fa3a9bf9b2d6ed2431f1baa46f4058b8  tcl_tk/tcl8.5.13-src.tar.gz
 1fc7dbb7495160756dbc805224afa360  tcl_tk/tk8.5.13-src.tar.gz
 d44b5dddebd8a7a7309aea6c36fda117  utils/bc-1.06.tar.gz
